--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -23,10 +23,10 @@
 }
 
 .dropdown-items {
-    margin-top: -10px;
+    margin-top: -10px !important;
 }
 .dropdown-items.show {
-    margin-top: 0px;
+    margin-top: 0px !important;
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
